--- a/CSS basic/main.html
+++ b/CSS basic/main.html
@@ -11,5 +11,9 @@
     <div class="header">
         <a href="">Ayon Plabon</a>
     </div>
+    <!-- navigation bar-->
+    <div class="navbar">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates explicabo aperiam autem sed enim necessitatibus rerum voluptatem praesentium consequuntur possimus temporibus laborum error minus repellendus, earum consequatur in? Ipsam tempora dignissimos, eius iste quasi nesciunt excepturi optio quod porro beatae maxime ex ipsa nihil quisquam amet numquam magnam nobis ad explicabo autem? Magnam quod labore libero vitae beatae nemo molestiae temporibus esse illo, tempora saepe eum repellat eius dolore harum. Aspernatur numquam commodi, quod eius voluptas nobis impedit eum voluptatum id deleniti itaque sit delectus sapiente repellendus officia rem ab voluptates temporibus iure excepturi perspiciatis hic non consectetur veniam! Maiores.</p>
+    </div>
 </body>
 </html>
