--- a/CSS basic/main.html
+++ b/CSS basic/main.html
@@ -25,5 +25,17 @@
         <i class="fa-solid fa-dolly"></i>
         <a href="a" id="innerLink">Click here to read more</a>
     </div>
+    <!-- list item in css -->
+    <div class="list-class">
+        
+            <ol>
+                <li>this one list item</li>
+        <li>this two list item</li>
+        <li>this three list item</li>
+        <li>this four list item</li>
+        <li>this five  list item</li>
+            </ol>
+        
+    </div>
 </body>
 </html>
