block inline element display none hidden

--- a/CSS basic/main.html
+++ b/CSS basic/main.html
@@ -37,5 +37,8 @@
             </ol>
         
     </div>
+    <br>
+    <!-- this is display-->
+    <div class="my-display"></div>
 </body>
 </html>
