--- a/CSS basic/main.html
+++ b/CSS basic/main.html
@@ -38,6 +38,33 @@
         
     </div>
     <br>
+    <!-- table-->
+
+<div class="my-table">
+    <div class="table-container">
+<table>
+    <tr>
+<th> Header-1one</th>
+<th>Header-2one</th>
+<th>Header-3one</th>
+<th>Header-4one</th>
+    </tr>
+    <tr>
+<td>Table data</td>
+<td>Table data</td>
+<td>Table data</td>
+<td>Table data</td>
+    </tr>
+    <tr>
+<td>Table data</td>
+<td>Table data</td>
+<td>Table data</td>
+<td>Table data</td>
+    </tr>
+</table>
+    </div>
+</div>
+    <br> <br> <br>
     <!-- this is display-->
     <div class="my-display"></div>
 </body>
