Table display position float alignment

--- a/CSS basic/main.html
+++ b/CSS basic/main.html
@@ -17,6 +17,9 @@
     <div class="header">
         <a href="">Ayon Plabon</a>
     </div>
+
+    <!-- this is display-->
+    <div class="my-display"></div>
     <!-- navigation bar-->
     <div class="navbar">
         <i class="fa-solid fa-car-rear">
@@ -65,7 +68,11 @@
     </div>
 </div>
     <br> <br> <br>
-    <!-- this is display-->
-    <div class="my-display"></div>
+    <!-- float-->
+    <div class="float">
+        <p>This is paragraph, now I will show an image <img id="myimg" src="background.jpg" 
+            style="width: 50px; height: 50px;"  alt=""></p>
+    </div>
+    
 </body>
 </html>
